# numerical_methods_codes

./: .gitignore  CMakeLists.txt  README.md  print_anagram.c  print_difftble.c  print_euler.c  print_fib.c  print_linterpol.c  print_ninterpol.c  print_root_bisection.c  print_root_nr.c  print_simpson.c  print_trapezoidal.c
